--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-family: 'Kanit', sans-serif;
+}
+
+.container {
+    text-align: center;
+}
+
+.form-control {
+    display: inline;
+    width: 25%;
 }
